# NewF4DConverter

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  f4d.rc  launch.vs.json
cmake/: FindAssimp.cmake  FindBoost.cmake  FindBoost.cmake--  FindCityGML.cmake  FindGDAL.cmake  FindGLFW.cmake  FindGLM.cmake  FindGeoTIFF.cmake  FindJsoncpp.cmake  FindLibLAS.cmake  FindProj.cmake  FindXerces.cmake  cmake_apply_patches.cmake
docker/: Dockerfile  build.bat  config.bat  run.bat
docker/env/: enabledevtoolset-4.sh  enabledevtoolset-7.sh  entrypoint.sh  set-display.sh  set-locale.sh
include/: argdefinition.h  predefinition.h
patch/ifcplusplus/: fix-config-path.patch
src/: main.cpp
src/converter/: ConverterManager.cpp  ConverterManager.h  LogWriter.cpp  LogWriter.h
src/geometry/: AbstractFeatures.cpp  AbstractFeatures.h  BoundingBox.cpp  BoundingBox.h  ColorU4.h  Face.cpp  Face.h  GeometryManager.cpp  GeometryManager.h  LegoBlock.cpp  LegoBlock.h  LineString.h  LinearRing.cpp  LinearRing.h  Matrix4.cpp  Matrix4.h  OctreeBox.cpp  OctreeBox.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  PointDistributionOctree.cpp  PointDistributionOctree.h  Polygon.cpp  Polygon.h  Polygon2D.cpp  Polygon2D.h  Quadtree.cpp  Quadtree.h  Quaternion.cpp  Quaternion.h  Solid.cpp  Solid.h  Surface.cpp  Surface.h  Triangle.cpp  Triangle.h  TrianglePolyhedron.cpp  TrianglePolyhedron.h  (+3 more)
src/process/: ConversionProcessor.cpp  ConversionProcessor.h  NetSurfaceMeshMaker.cpp  NetSurfaceMeshMaker.h  NetSurfaceMeshSetting.cpp  NetSurfaceMeshSetting.h  ProcessSetting.cpp  ProcessSetting.h  SceneControlVariables.cpp  SceneControlVariables.h
src/reader/: AvevaRevReader.cpp  AvevaRevReader.h  CityGMLReader.cpp  CityGMLReader.h  ClassicFormatReader.cpp  ClassicFormatReader.h  IfcLoader.h  IfcReader.cpp  IfcReader.h  IfcppLoader.cpp  IfcppLoader.h  IndoorGMLReader.cpp  IndoorGMLReader.h  PointCloudReader.cpp  PointCloudReader.h  Reader.cpp  Reader.h  ReaderFactory.cpp  ReaderFactory.h
src/util/: GeometryUtility.cpp  GeometryUtility.h  Image2D.cpp  Image2D.h  Image2DSplitData.cpp  Image2DSplitData.h  Image2DUtils.cpp  Image2DUtils.h  ParserUtil.cpp  ParserUtil.h  Rectangle.cpp  Rectangle.h  StringUtility.cpp  StringUtility.h
src/writer/: F4DWriter.cpp  F4DWriter.h
